# OrgFlow

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  create_env_file.sh  environment.yml  pyproject.toml
data/organic/: cleaned_data.csv  train.csv  val.csv
scripts_analysis/: crystal_graph_visualizer.py  dft_create_inputs.py  ehull.py  ehull_correction.py  novelty.py  prerelax.py  tmp1n0_mu4i
scripts_model/: add_atom_weights.py  bench_efficiency.py  compare_test_crystals.py  custom_preprocess.py  efficiency_tools.py  evaluate.py  export_top_traj.py  new_eval.py  organic_eval.py  run.py  sweep_tradeoff.py  traj_visualizer.py  viz_align_overlay.py  write_pred_cifs_refined.py
scripts_model/conf/: default.yaml
scripts_model/conf/data/: organic.yaml
scripts_model/conf/model/: null_params.yaml
scripts_model/conf/vectorfield/: cspnet.yaml  rfm_cspnet.yaml
src/flowmm/: cfg_utils.py
src/flowmm/csp_ext/: data_utils.py
src/flowmm/model/: arch.py  bond_length_loss.py  generate_affine_stats_organic.py  model_pl.py
src/flowmm/old_eval/: reconstruction_metrics.py
src/flowmm/rfm/: manifold_getter.py
src/orgflow/: cfg_utils.py  chgnet_.py  pymatgen_.py  tabular.py
src/orgflow/csp_ext/: cspnet.py  data_utils.py  dataset.py
src/orgflow/model/: arch.py  bond_data.py  bond_length_loss.py  eval_utils.py  generate_affine_stats_organic.py  model_pl.py  solvers.py  standardize.py  stats_organic_flat_torus_01.yaml  stats_organic_flat_torus_01_fixfirst.yaml  stats_organic_flat_torus_01_fixfirst_normal.yaml  stats_organic_flat_torus_01_normal.yaml  (+4 more)
(+15 files in other folders)
